--- a/css/stories.css
+++ b/css/stories.css
@@ -91,7 +91,7 @@
 .delete-btn {
   background: none;
   border: none;
-  color: #f4f0f0;
+  color: #7445e1;
   font-size: 1rem;
   cursor: pointer;
 }
