--- a/css/home.css
+++ b/css/home.css
@@ -5,8 +5,8 @@ body {
 }
 
 main {
-  padding: 2rem 1rem;
-  max-width: 1000px;
+padding: 1rem 0.1rem;
+  max-width: 1100px;
   margin: auto;
   box-sizing: border-box;
   width: 100%;
@@ -41,11 +41,34 @@ main {
 
 .intro-text {
   flex: 1 1 300px;
+  background: linear-gradient(135deg, #f2f0ff 0%, #e7e4ff 100%);
+  padding: 2rem;
+  border-radius: 1.8rem;
+  box-shadow: 0 8px 20px rgba(75, 76, 136, 0.08);
+  border: 1px solid #dad5ff;
+  text-align: right;
+  color: #3f3d56;
 }
 
-.intro-text h2 {
-  margin-top: 0;
+.intro-text p {
+  line-height: 1.9;
+  font-size: 1.1rem;
+  color: #3f3d56;
 }
+
+
+.intro-text h2 {
+  font-size: 1.9rem;
+  color: #5d5fa6;
+  margin-bottom: 0.2rem;
+  margin-top: 0.2rem;
+  border-bottom: 2px solid #b4b5e0;
+  padding-bottom: 0.5rem;
+  display: inline-block;
+}
+
+
+
 
 /* אזור קריאה לפעולה */
 .call-to-action {
